fix(flipBook): removed unexpected white space when page refreshes for flip book

--- a/app/styles/index.css
+++ b/app/styles/index.css
@@ -32,6 +32,20 @@ body {
   scroll-snap-type: y mandatory;
 }
 
+
+  @media screen and (max-width: 719px) {
+    .portfolio-container {
+      display: flex;
+    }
+  }
+
+  @media screen and (min-width: 720px) {
+    .portfolio-container {
+      background-color: #ecf0f3;
+    }
+  }
+
+
 .section-child {
   scroll-snap-align: start;
 }
